# touhou-guessing-game-bot

./: .env.example  .flake8  .gitignore  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
bot/: bot.py  config.py
bot/guessing_game/: abstract_game.py  endless.py  game.py
bot/plugins/: games.py  ping.py
bot/utils/: __init__.py  game_view.py  plugin.py  users.py
characters/: __init__.py  generate_silhouettes.py  utils.py
db/: __init__.py  database.py
migrations/0000/: describe.json  migrations.sql
src/async_lru/: __init__.pyi
src/bot/: bot.py
src/bot/guessing_game/: endless.py  game.py
src/bot/plugins/: games.py  ping.py
src/characters/: generate_silhouettes.py
src/utils/: __init__.py
